--- a/bol-tracker.cabal
+++ b/bol-tracker.cabal
@@ -4,10 +4,8 @@ version:            0.1.0.0
 
 library
   hs-source-dirs:      src
-  exposed-modules:     MyLib
-                     , StateMachine
-                     , TestStateMachine
-                     , TokenSaleWithClose
+  exposed-modules:     TestBoLTracker
+                     , BoLTracker
   build-depends:       aeson
                      , base ^>=4.14.3.0
                      , containers
@@ -28,6 +26,8 @@ library
                      , lens
                      , plutus-chain-index-core
                      , cardano-node-emulator
+                     , template-haskell
+                     , tasty
                 
 
   default-language:    Haskell2010
